--- a/tasky-api/package.json
+++ b/tasky-api/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "uuid": "^11.1.0"
   }
 }
