--- a/tasky-api/package.json
+++ b/tasky-api/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "uuid": "^11.1.0"
