--- a/tasky-react/package.json
+++ b/tasky-react/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.76.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.6.0",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@tanstack/react-query-devtools": "^5.76.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
